<resources>
    <string name="hello">Hello, IOIO User!</string>
    <string name="app_name">IOIO Scope</string>
    <string name="settings">Settings</string>
    <string name="description_chart">chart</string>
    <string name="input_type_1">digital</string>
    <string name="input_type_46">analog</string>
    <string name="connecting">connecting ...</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>