<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:title="@string/app_name"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.jkristian.android.ioio.scope.MainFragment">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:stretchColumns="3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow android:gravity="center_vertical">

            <TextView
                android:id="@+id/number1"
                android:layout_width="match_parent"
                android:gravity="right"
                android:paddingLeft="8dp"
                android:paddingRight="4dp"
                android:text="1." />

            <TextView
                android:id="@+id/inputType1"
                android:paddingRight="8dp"
                android:text="@string/input_type_1" />

            <ImageView
                android:id="@+id/chart1"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:layout_column="3"
                android:background="@color/chartBackground"
                android:contentDescription="@string/description_chart" />
        </TableRow>

        <View android:layout_height="8dp" />

        <TableRow android:gravity="center_vertical">

            <TextView
                android:id="@+id/number46"
                android:layout_width="match_parent"
                android:gravity="right"
                android:paddingLeft="8dp"
                android:paddingRight="4dp"
                android:text="46." />

            <TextView
                android:id="@+id/inputType46"
                android:paddingRight="8dp"
                android:text="@string/input_type_46" />

            <ImageView
                android:id="@+id/chart46"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:layout_column="3"
                android:background="@color/chartBackground"
                android:contentDescription="@string/description_chart"
                android:paddingLeft="8dp" />
        </TableRow>
    </TableLayout>

    <TextView
        android:id="@+id/connectionStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginBottom="8dp"
        android:layout_span="3"
        android:text="@string/connecting"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>